--- a/app/login/login.html
+++ b/app/login/login.html
@@ -6,24 +6,11 @@
     <title>Vanilla Tailwind CSS Boilerplate</title><link rel="icon" type="image/x-icon" href="./app/images/favicon.ico">
   </head>
   <body class="px-4 h-screen flex items-center justify-center">
-    <div>
-      <h1>Welcome to My Website</h1>
-      <img src="../images/hero--large.jpg" alt="A beautiful scenery" class="responsive-img" width="500" height="300">
-    </div>
-
     <div class="bg-white p-8 rounded shadow-md">
-      <h1 class="text-2xl font-semibold mb-4">Welcome to Tailwind CSS!</h1>
-      <p class="text-gray-700">
-        Tailwind CSS is a utility-first CSS framework that helps you quickly
-        build modernn and responsive user interfaces.
-      </p>
-      <button
-        class="mt-4 px-4 py-2 bg-indigo-500 text-vlack-600 rounded hover:bg-orange-600"
-      >
-        Get Started
-      </button>
-      <h1>this is login page</h1>
-      <a href="/">Go to Index page</a>
+      <h1>You are in login page</h1>
+      <a href="/" class="bg-slate-300">Go to Home page</a>
+      <span> (OR) </span>
+      <a href="../login/login.html" class="bg-slate-300">go to about Page</a>
     </div>
   </body>
   <script type="module" src="/app/scripts/main.js"></script>
