--- a/app/about/about.html
+++ b/app/about/about.html
@@ -7,19 +7,10 @@
   </head>
   <body class="px-4 h-screen flex items-center justify-center">
     <div class="bg-white p-8 rounded shadow-md">
-      <h1 class="text-2xl font-semibold mb-4">Welcome to Tailwind CSS!</h1>
-      <p class="text-gray-700">
-        Tailwind CSS is a utility-first CSS framework that helps you quickly
-        build modernn and responsive user interfaces.
-      </p>
-      <button
-        class="mt-4 px-4 py-2 bg-indigo-500 text-vlack-600 rounded hover:bg-orange-600"
-      >
-        Get Started
-      </button>
-      <h1>this is about page</h1>
-      <a href="/">Go to Index page</a>
-      <a href="../login/login.html">go to Login</a>
+      <h1>You are in about page</h1>
+      <a href="/" class="bg-slate-300">Go to Home page</a>
+      <span> (OR) </span>
+      <a href="../login/login.html" class="bg-slate-300">go to Login Page</a>
     </div>
   </body>
   <script type="module" src="/app/scripts/main.js"></script>
