--- a/index.html
+++ b/index.html
@@ -10,23 +10,13 @@
 
 <body class="px-4 h-screen flex items-center justify-center">
   <div class="bg-white p-8 rounded shadow-md">
-    <h1 class="text-2xl font-semibold mb-4">Welcome to Tailwind CSS!</h1>
-    <p class="text-gray-700">
-      Tailwind CSS is a utility-first CSS framework that helps you quickly
-      build modernn and responsive user interfaces.
-    </p>
-    <button class="mt-4 px-4 py-2 bg-yellow-500 text-vlack-600 rounded hover:bg-orange-600">
-      Get Started
-    </button>
     <h1>this is home page </h1>
-    <a href="app/login/login.html">go to Login</a>
-    <a href="app/about/about.html">go to about</a>
+    <a href="app/login/login.html" class="bg-slate-300">go to Login Page</a>
+    <span> (OR) </span>
+    <a href="app/about/about.html" class="bg-slate-300">go to about Page</a>
   </div>
 
-  <div>
-    <h1>Welcome to My Website</h1>
-    <img src="app/images/first-trip.jpg" alt="A beautiful scenery" class="responsive-img" width="500" height="300">
-  </div>
+
 </body>
 <script type="module" src="/app/scripts/main.js"></script>
 
